--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ padding: 0;
 box-sizing: border-box;
 font-family: 'playfair display';
 }
+
+    <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+background-image: url('blackwhite.jpg');
+background-repeat: no-repeat;
+        
+        <img src="singer.png" style="width:50%;">
+
 #menu-h{
     background-color:rgb(32, 35, 40);
 }
