--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import
-url(&#39;https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..90
-0&amp;display=swap&#39;);
+url(&#39;https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap&#39;);
 
 * {
 
