--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import
-url(&#39;https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap&#39;);
+@import url(&#39;https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap&#39;);
 
 * {
 
