--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 margin: 0 auto;
 padding: 0;
 box-sizing: border-box;
-font-family: &#39;playfair display&#39;;
+font-family: 'playfair display';
 }
 #menu-h{
 background-color:rgb(32, 35, 40);
