--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ transition: background .4s;
 
 body{
 
-background-image: url('blackwhite.jpg');
+background-image: url('singer.png');
 background-repeat: no-repeat;
 
 }
