--- a/style.css
+++ b/style.css
@@ -54,7 +54,9 @@ transition: background .4s;
 
 body{
 
+    <style>
 background-image: url('singer.png');
 background-repeat: no-repeat;
-
+<style/>
+    
 }
