--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@ transition: background .4s;
 
 #fundo {
   background-image: url(blackwhite.jpg);
-  background-size: 1920px 1080px;
+  background-size: 1080px 1080px;
   background-position: left top;
   background-repeat: no-repeat;
+  padding: 250px;
 
 
 }
