--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ transition: background .4s;
 #fundo {
   background-image: url(blackwhite.jpg);
   background-size: cover;
-  background-position: left top;
+  background-position: center;
   background-repeat: no-repeat;
 
 
