--- a/style.css
+++ b/style.css
@@ -53,12 +53,10 @@ transition: background .4s;
         } 
 
 #fundo {
-  background-image: url(blackwhite.jpg);
+  background: no-repeat center/100% url(blackwhite.jpg);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-
-
+  
 
 }
     
