--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ background-color:rgb(32, 35, 40);
 #menu-h ul li{
 
 display: inline;
+position: fixed;
 
 }
 
@@ -50,7 +51,9 @@ transition: background .4s;
         #menu-h ul li:last-child a:hover{
             background-color:#ee8b1a;
         } 
-
+.container-tudo {
+    margin-top:45px;
+}
 body{
 
     background-color: rgb(50, 39, 117);
