--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ padding: 0;
 box-sizing: border-box;
 font-family: 'playfair display';
 }
+
+.container-menu {
+    position: fixed;
+    margin: 0;
+    top: 0;
+    width: 100%;
+    height: 45px;
+}
+
+.container-tudo {
+    margin-top:45px;
+}
+
 #menu-h{
     background-color:rgb(32, 35, 40);
 }
@@ -51,9 +64,6 @@ transition: background .4s;
         #menu-h ul li:last-child a:hover{
             background-color:#ee8b1a;
         } 
-.container-tudo {
-    margin-top:45px;
-}
 body{
 
     background-color: rgb(50, 39, 117);
