--- a/cards.css
+++ b/cards.css
@@ -11,7 +11,7 @@ body{
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #DE522F;
+    background: #008B8B;
 }
 
 .container{
@@ -55,25 +55,25 @@ body{
     height: 15px;
     margin: 0 15px;
     border-radius: 50%;
-    background: #DE522F;
+    background: #008B8B;
     cursor: pointer;
     position: relative;
 }
 
 .container .product .color .green{
-    background: #9ABE62;
+    background: #008B8B;
 }
 
 .container .product .color .black{
-    background: #222627;
+    background: #483D8B;
 }
 
 .container .product .color .red{
-    background: #B41D26;
+    background: #DC143C;
 }
 
 .container .product .color .orange{
-    background: #DE522F;
+    background: #FFDEAD;
 }
 
 .container .product .color .active::after{
@@ -102,12 +102,12 @@ body{
 }
 
 .container .product .detail p span{
-    color: #DE522F;
+    color: #008B8B;
 }
 
 .container .product .detail a{
     text-decoration: none;
-    background: #DE522F;
+    background: #008B8B;
     padding: 8px 45px;
     border-radius: 8px;
     color: white;
